Fix flex height overflow in Python Playground output div

--- a/components/playground/PythonPlayground.module.scss
+++ b/components/playground/PythonPlayground.module.scss
@@ -53,11 +53,13 @@
     border-left: 1px solid $color-gray-300;
     display: flex;
     flex-direction: column;
+    height: 100%;
 
     .outputBox {
       flex-grow: 1;
       display: flex;
       flex-direction: column;
+      max-height: 100%;
 
       .boxHeader {
         padding: 0.5rem 1rem;
@@ -69,9 +71,10 @@
           color: $color-white;
           font-size: 1.05rem;
           color: $color-gray-800;
-          font-weight: 500;
+          font-weight: 600;
           line-height: 1.4;
           letter-spacing: -0.01rem;
+          margin-top: 0.25rem;
           display: flex;
           align-items: center;
 
@@ -119,14 +122,14 @@
         h4 {
           font-size: 0.9rem;
           font-weight: 500;
-          padding: 0.75rem 1.25rem;
+          padding: 0.75rem 1rem;
 
           span {
             display: inline-block;
             padding: 0.25rem 0.6rem;
             line-height: 1.4;
             color: white;
-            background-color: $color-blue;
+            background-color: $color-green;
             border-radius: 0.25rem;
           }
         }
